fix collection banner spacing

--- a/src/_styles/modules/collection-banner.scss
+++ b/src/_styles/modules/collection-banner.scss
@@ -27,7 +27,7 @@
     }
 
     .collection-banner__content {
-      margin-bottom: 30px;
+      margin-bottom: 0;
       border-bottom: 3px solid $black;
     }
   }
